--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8081
+server.servlet.context-path=/app
 
+value.name=fabian
+value.lastName=mm
+value.random=${random.value}
+
+user.email=test@gmail.com
+user.password=1234
+user.age=30
+
+logging.level.root=debug
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
